<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_panic"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Panic"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_home_text"
        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/bottom_action_new_post"
        android:icon="@drawable/ic_add_box_24dp"
        android:title="@string/menu_title_new_post"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/bottom_action_profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/menu_title_profile"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/support_blogs_item"
        android:icon="@drawable/ic_blog_drawer"
        android:title="@string/blogs"
        app:showAsAction="always|withText" />


</menu>