<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    tools:context="igory.panicbutton.PanicButton">

    <View
        android:id="@+id/frame"
        android:layout_width="301dp"
        android:layout_height="301dp"
        android:background="@color/darkestGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <ToggleButton
        android:id="@+id/PanicButton"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/darkestGrey"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="panicTrigger"
        android:orientation="vertical"
        android:textColor="@android:color/background_light"
        android:textOff="@string/panic"
        android:textOn="@string/countdown"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toTopOf="@+id/frame" />

    <SeekBar
        android:id="@+id/cancelSlideBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:max="100"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:progressDrawable="@color/darkestGrey"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PanicButton"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/slideToCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/slide_right_to_cancel"
        android:textColor="@color/lightestBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelSlideBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/progressDots"
        android:layout_width="289dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dots"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/darkestGrey"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/PanicButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
