<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubble_background"
    tools:context=".controler.RegisterActivity">

    <ImageView
        android:id="@+id/loginPageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/login_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_one_for_all" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/focusable"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email_container" />

    <LinearLayout
        android:id="@+id/email_container"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:background="#80ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageLogo" >


            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/pass_hint"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/focusable"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pass_container" />

    <LinearLayout
        android:id="@+id/pass_container"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:background="#80ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_container">


            <EditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/reg_pass_text"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="18sp"  />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/confirm_pass"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/focusable"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/confirm_pass_container" />

    <LinearLayout
        android:id="@+id/confirm_pass_container"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="16dp"
        android:background="#80ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_container">

        <EditText
            android:id="@+id/reg_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/primaryTextColor"
            android:hint="@string/reg_confirm_pass_text"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            android:textSize="18sp"    />

    </LinearLayout>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/focusable"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/reg_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_container" />

    <Button
        android:id="@+id/reg_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/focusable"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/reg_login_text"
        android:textAllCaps="false"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.github.glomadrian.grav.GravView
        android:id="@+id/grav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:array_colors="@array/bubble"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="300"
        app:regular_variance="200"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:ball_from_size="10dp"
        app:ball_to_size="20dp"
        app:animationGenerators="@array/BubbleAnimations"
        app:side_to_side_min_duration="10000"
        app:side_to_side_max_duration="10000"
        app:side_to_side_direction="leftToRight"
        app:shake_direction="vertical"
        app:shake_min_duration="10000"
        app:shake_max_duration="20000"
        app:shake_variance="500dp"
        />

    <LinearLayout
        android:visibility="gone"
        android:elevation="15dp"
        android:id="@+id/avi2contentReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="#B0000000">


        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi2"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"






            android:visibility="visible"

            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="BallSpinFadeLoaderIndicator"

            />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>